flux/monitoring/prometheus/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: prometheus
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: grafana
    toPorts:
    - ports:
      - port: "9090"
        protocol: TCP
  egress:
  - toEntities:
    - cluster
